# speakispeak

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE-0BSD  README.md  THIRD_PARTY_NOTICES.md  config.example.toml  main.py  pyproject.toml
.build/vosk/openblas/: include  lib
.build/vosk/wheel-stage/vosk/: libfst.23.dylib  libfst.dylib  libfstfar.23.dylib  libfstfar.dylib  libfstfarscript.23.dylib  libfstfarscript.dylib  libfstlookahead.23.dylib  libfstlookahead.dylib  libfstngram.23.dylib  libfstngram.dylib  libkaldi-base.dylib  libkaldi-chain.dylib  libkaldi-cudamatrix.dylib  libkaldi-decoder.dylib  libkaldi-feat.dylib  libkaldi-fstext.dylib  libkaldi-gmm.dylib  libkaldi-hmm.dylib  libkaldi-ivector.dylib  libkaldi-lat.dylib  libkaldi-lm.dylib  libkaldi-matrix.dylib  libkaldi-nnet2.dylib  libkaldi-nnet3.dylib  libkaldi-online2.dylib  libkaldi-rnnlm.dylib  libkaldi-transform.dylib  (+3 more)
.build/vosk/wheel-stage/vosk-0.3.50.dist-info/: METADATA  RECORD  WHEEL  entry_points.txt
dashboard/: index.html
elias/: __init__.py  audio.py  dashboard.py  detection.py  opus.py  session.py  sink.py  sounds.py  state.py  stt_worker.py  vendor_bootstrap.py  voice_recv_patch.py  wakewords.py  whisper_worker.py
scripts/: recv_to_wav.py  send_message.py
tests/: test_voice_transport_supervisor.py
web/: index.html  package.json  vite.config.ts
web/src/: App.tsx  app.css  types.ts  utils.ts  vite-env.d.ts
web/src/components/: ConnectionLines.tsx  SpeakiSprite.tsx  TranscriptionLine.tsx  UserCard.tsx  VoteBanner.tsx  WaveformCanvas.tsx  WorkerNode.tsx
web/src/hooks/: useDashboard.ts
