[project]
name = "speakispeak"
version = "0.1.0"
description = "Discord wakeword bot with Vosk speech recognition and vendored voice receive fixes"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "Unlicense OR 0BSD" }
dependencies = [
    "aiohttp>=3.11",
    "davey>=0.1.4",
    "discord-py>=2.7.1",
    "pynacl>=1.5.0",
    "vosk>=0.3.50 ; platform_machine == 'arm64' and sys_platform == 'darwin'",
    "vosk>=0.3.45 ; platform_machine != 'arm64' or sys_platform != 'darwin'",
]

[tool.uv.sources]
vosk = [
    { path = "vendor/wheels/vosk-0.3.50-py3-none-macosx_10_6_universal2.whl", marker = "sys_platform == 'darwin' and platform_machine == 'arm64'" },
]
